--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.47",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
