--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dev-utils": "^10.2.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
+    "react-swipeable-views": "^0.13.9",
     "recharts": "^1.8.5",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
