--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "clsx": "^1.1.0",
     "css-loader": "3.4.2",
+    "d3-scale": "^3.2.1",
+    "d3-scale-chromatic": "^1.5.0",
     "dotenv": "^8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
